# discord-weekly-report

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: weekly-report.yml
config/: topics.yml
docs/: setup.md  user_setup.md
scripts/: run_weekly.ps1  setup.ps1  verify_feishu.ps1
src/discord_weekly_report/: __init__.py  ai_analyzer.py  analyzer.py  codex_review.py  collector.py  config.py  date_range.py  discord_client.py  filters.py  import_codex_review.py  main.py  models.py  paths.py  prepare_codex_review.py  report_io.py  report_writer.py  scoring.py  topic_filter.py  topic_insights.py  topic_report_writer.py  topics.py  verify_feishu.py  verify_feishu_message.py
src/discord_weekly_report/feishu/: __init__.py  cli_user.py  client.py  post_records.py  publisher.py
tests/: test_ai_analyzer.py  test_analyzer_chinese.py  test_bitable_post_records.py  test_codex_review.py  test_date_range.py  test_feishu_cli_user.py  test_filters.py  test_report_writer.py  test_scoring.py  test_topic_filter.py
